# my-open-json

./: .gitignore  AGENTS.md  README.md  oh-my-openagent.json  oh-my-openagent.json.migrations.json  opencode.json  package-lock.json  package.json  pyproject.toml
.sisyphus/evidence/: evomemory-replay-summary.json  f1-plan-compliance.md  f2-code-quality.md  f3-real-qa.md  f4-scope-fidelity.md  task-1-offline-proof.json  task-1-replay-negative.json  task-1-replay-positive.json  task-1-replay-summary.json  task-10-docs-safety.txt  task-10-final-replay.json  task-2-trace-redaction.json  task-2-trace-search.json  task-2-trace-timeout.json  task-3-cross-project-replay-after.json  task-3-cross-project-replay-before.json  task-3-legacy-compat.json  task-3-namespace.json  task-4-budget.json  (+17 more)
mcp/: mempalace_bridge_core.py  mempalace_bridge_server.py  mempalace_memory_policy.py  mempalace_session_state.py  opencode-a2a-relay-mcp.bundle.js  opencode-a2a-relay-mcp.js
plugins/: evomemory-bridge-manager.mjs  evomemory-opencode.config.json  evomemory-opencode.helpers.mjs  evomemory-opencode.js  graphify.js  mempalace-bridge-manager.mjs  mempalace-opencode.config.json  mempalace-opencode.helpers.mjs  mempalace-opencode.js  opencode-a2a-relay.config.json  opencode-a2a-relay.js  opencode-a2a-relay.js.disabled  opencode-dcp.js  rtk.ts  superpowers.js  tool-forced-eval.config.json  tool-forced-eval.helpers.mjs  tool-forced-eval.js  tool-forced-eval.mcp.metadata.json  tool-forced-eval.mcp.mjs  tool-forced-eval.rank.mjs  tool-forced-eval.skill-rules.json  tool-forced-eval.skills.mjs
(+148 files in other folders)
